plugins {
    `java-library`
}

group = "org.snakeyaml"

dependencies {

    compileOnly(libs.jspecify)

    testAnnotationProcessor(libs.jmh.generator.annprocess)

    testImplementation(libs.junit.jupiter.api)
    testImplementation(libs.guava)
    testImplementation(libs.jmh.core)

    testRuntimeOnly(libs.junit.platform.launcher)
    testRuntimeOnly(libs.junit.jupiter.engine)
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    withSourcesJar()
}

tasks {
    compileJava {
        options.encoding = "UTF-8"
    }

    test {
        useJUnitPlatform()
        environment("EnvironmentKey1", "EnvironmentValue1")
        environment("EnvironmentEmpty", "")
    }
}
